--- a/survey-app/public/styles/site/_layout.styl
+++ b/survey-app/public/styles/site/_layout.styl
@@ -56,6 +56,8 @@ a
 
 #assessment-body
     background-color $light-blue
+    padding-bottom 30px
+    margin-top 20px
 
 #landing-mid p 
     line-height 2
